@@ -26,6 +26,8 @@ and get them out to file system.
 * If create directory command executed - loading spinner
 would be on top.
 
+* Refactored getShortSize
+
 
 2012.03.01, Version 0.1.9
 
